feat(app): use supabase-js v2 (#65)

--- a/docs/content-v1/3.usage/1.composables/1.use-supabase-client.md
+++ b/docs/content-v1/3.usage/1.composables/1.use-supabase-client.md
@@ -17,11 +17,11 @@ const client = useSupabaseClient()
 </script>
 ```
 
-## SignIn
+## Authentification
 
-All authentification methods are available on [Supabase Auth](https://supabase.com/docs/reference/javascript/next/auth-signinwithpassword) Documentation.
+All authentification methods are available on [Supabase Auth](https://supabase.com/docs/reference/javascript/auth-signup) Documentation.
 
-Here is an example of the login using the `signInWithOAuth` method with [third-party providers](https://supabase.com/docs/reference/javascript/next/auth-signinwithoauth).
+Here is an example of the login using the `signIn` method with [third-party providers](https://supabase.com/docs/reference/javascript/auth-signin#sign-in-using-third-party-providers).
 
 ```vue [pages/login.vue]
 <script setup lang="ts">
@@ -31,7 +31,7 @@ const router = useRouter()
 
 // Login method using providers
 const login = async (provider: 'github' | 'google' | 'gitlab' | 'bitbucket') => {
-  const { error } = await client.auth.signInWithOAuth({ provider })
+  const { error } = await client.auth.signIn({ provider })
 
   if (error) {
     return alert('Something went wrong !')
@@ -51,20 +51,6 @@ Thanks to the [Nuxt plugin](https://v3.nuxtjs.org/docs/directory-structure/plugi
 ::
 
 > Take a look at the [auth middleware](/usage/composables/use-supabase-user#auth-middleware) section to learn how to leverage Nuxt middleware to protect your routes for unauthenticated users.
-
-## SignOut
-
-Check [Supabase Documentation](https://supabase.com/docs/reference/javascript/next/auth-signout) for further details.
-
-```vue
-<template>
-  <button @click="client.auth.signOut()">Logout</button>
-</template>
-
-<script>
-const client = useSupabaseClient()
-</script>
-```
 
 ## Database Request
 
@@ -94,11 +80,10 @@ Then, listen to changes directly in your vue page / component:
 
 ```vue
 <script setup lang="ts">
-import type { RealtimeChannel } from '@supabase/supabase-js'
+import type { RealtimeSubscription } from '@supabase/supabase-js'
 
 const client = useSupabaseClient()
-
-let realtimeChannel: RealtimeChannel
+let subscription: RealtimeSubscription
 
 // Fetch collaborators and get the refresh method provided by useAsyncData
 const { data: collaborators, refresh: refreshCollaborators } = await useAsyncData('collaborators', async () => {
@@ -108,19 +93,14 @@ const { data: collaborators, refresh: refreshCollaborators } = await useAsyncDat
 
 // Once page is mounted, listen to changes on the `collaborators` table and refresh collaborators when receiving event
 onMounted(() => {
-  // Real time listener for new workouts
-  realtimeChannel = client.channel('public:collaborators').on(
-    'postgres_changes',
-    { event: '*', schema: 'public', table: 'collaborators' },
-    () => refreshCollaborators()
-  )
-
-  realtimeChannel.subscribe()
+  subscription = client.from('collaborators').on('*', () => {
+    refreshCollaborators()
+  }).subscribe()
 })
 
-  // Don't forget to unsubscribe when user left the page
+// Don't forget to unsubscribe when user left the page
 onUnmounted(() => {
-  client.removeChannel(realtimeChannel)
+  client.removeSubscription(subscription)
 })
 </script>
 ```
