--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -56,26 +56,37 @@ export default defineNuxtConfig({
 
 ### `url`
 
-- Default: `process.env.SUPABASE_URL` (ex: https://example.supabase.co)
+Default: `process.env.SUPABASE_URL` (ex: https://example.supabase.co)
 
 The unique Supabase URL which is supplied when you create a new project in your project dashboard.
 
 ### `key`
 
-- Default: `process.env.SUPABASE_KEY`
+Default: `process.env.SUPABASE_KEY`
 
 Supabase 'anon key', used to bypass the Supabase API gateway and interact with your Supabase database making use of user JWT to apply RLS Policies.
 
 ### `serviceKey`
 
-- Default: `process.env.SUPABASE_SERVICE_KEY`
+Default: `process.env.SUPABASE_SERVICE_KEY`
 
 Supabase 'service role key', has super admin rights and can bypass your Row Level Security.
 
 
+### `redirect`
+
+Default: `false`
+
+Supabase redirect options.
+
+- `login`: User will be redirected to this path if not authenticated or after logout. 
+- `callback`: This is the path the user will be redirect to after supabase login redirection. Should match configured `redirectTo` option of your [signIn method](https://supabase.com/docs/reference/javascript/next/auth-signinwithoauth).
+
+You can disable all redirects by setting this option to false.
+
 ### `client`
 
-- Default: `{}`
+Default: `{}`
 
 Supabase client options [available here](https://github.com/supabase/supabase-js/blob/master/src/lib/types.ts#L10).
 
@@ -83,7 +94,7 @@ Supabase client options [available here](https://github.com/supabase/supabase-js
 
 `0.1.x` versions are wrapped around `supabase-js v1`.
 <br>
-`0.2.x` versions are wrapped around `supabase-js v2` (coming soon).
+`0.2.x` versions are wrapped around `supabase-js v2`.
 
 ## Demo
 
