docs(client): add redirect to v1 doc

--- a/docs/content/3.usage/1.composables/1.use-supabase-client.md
+++ b/docs/content/3.usage/1.composables/1.use-supabase-client.md
@@ -3,6 +3,10 @@ title: useSupabaseClient
 description: null
 ---
 
+::alert
+If you're looking for the supabase v1 documentation (v0.1.x of this module), please check it [here](https://github.com/nuxt-modules/supabase/blob/main/docs/content-v1/3.usage/1.composables/1.use-supabase-client.md).
+::
+
 [Auto-import](https://v3.nuxtjs.org/docs/directory-structure/composables) your client inside your vue files.
 
 This composable is using [supabase-js](https://github.com/supabase/supabase-js/) under the hood, it gives acces to the [Supabase client](https://supabase.com/docs/reference/javascript/supabase-client).
