doc(client): add typescript support for database typings

--- a/docs/content/3.usage/1.composables/1.use-supabase-client.md
+++ b/docs/content/3.usage/1.composables/1.use-supabase-client.md
@@ -128,3 +128,14 @@ onUnmounted(() => {
 })
 </script>
 ```
+
+## Typescript
+
+You can pass Database typings to the client. Check Supabase [documentation](https://supabase.com/docs/reference/javascript/release-notes#typescript-support) for further information.
+
+```vue
+<script setup lang="ts">
+import type { Database } from '~/types'
+const client = useSupabaseClient<Database>()
+</script>
+```
