Fix spelling mistake
librairies → libraries

--- a/docs/content/3.usage/1.composables/1.use-supabase-client.md
+++ b/docs/content/3.usage/1.composables/1.use-supabase-client.md
@@ -17,7 +17,7 @@ This composable is using [supabase-js](https://github.com/supabase/supabase-js/)
 <script setup>
 const client = useSupabaseClient()
 
-// Example: client.from('librairies').eq('name', 'Vue').single()
+// Example: client.from('libraries').eq('name', 'Vue').single()
 </script>
 ```
 
