Simplify and clarify intro explanation

--- a/docs/content/3.usage/2.services/2.server-supabase-user.md
+++ b/docs/content/3.usage/2.services/2.server-supabase-user.md
@@ -7,7 +7,7 @@ toc: false
  This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
 ::
 
-This function is working similary as the [useSupabaseUser](/usage/composables/use-supabase-user) composable but is designed to be used in [server routes](https://v3.nuxtjs.org/guide/features/server-routes/).
+This function is similar to the [useSupabaseUser](/usage/composables/use-supabase-user) composable but is used in [server routes](https://v3.nuxtjs.org/guide/features/server-routes/).
 
 Define your server route and import the `serverSupabaseUser` from `#supabase/server`.
 
