--- a/docs/content/4.demo.md
+++ b/docs/content/4.demo.md
@@ -1,6 +1,6 @@
 ---
 title: Demo
-description: Demonstration of using Supabse with Nuxt.
+description: Demonstration of using Supabase with Nuxt.
 ---
 
 [![Supabase demo with Nuxt 3](https://user-images.githubusercontent.com/904724/160422461-8f87500a-8dec-4413-86b2-ba04e1b2d17b.png)](https://n3-supabase.netlify.app)
