docs: update nuxt & supabase links and fix typos

--- a/docs/content/3.usage/1.composables/1.use-supabase-client.md
+++ b/docs/content/3.usage/1.composables/1.use-supabase-client.md
@@ -7,9 +7,9 @@ description: null
 If you're looking for the supabase v1 documentation (v0.1.x of this module), please check it [here](https://github.com/nuxt-modules/supabase/blob/main/docs/content-v1/3.usage/1.composables/1.use-supabase-client.md).
 ::
 
-[Auto-import](https://v3.nuxtjs.org/docs/directory-structure/composables) your client inside your vue files.
+[Auto-import](https://nuxt.com/docs/guide/directory-structure/composables) your client inside your vue files.
 
-This composable is using [supabase-js](https://github.com/supabase/supabase-js/) under the hood, it gives acces to the [Supabase client](https://supabase.com/docs/reference/javascript/supabase-client).
+This composable is using [supabase-js](https://github.com/supabase/supabase-js/) under the hood, it gives access to the [Supabase client](https://supabase.com/docs/reference/javascript/initializing).
 
 > The client is initialized with the `SUPABASE_KEY` you must have in your `.env` file. It establishes the connection with the database and make use of user JWT to apply [RLS Policies](https://supabase.com/docs/learn/auth-deep-dive/auth-row-level-security) implemented in Supabase. If you want to bypass policies, you can use the [serverSupabaseServiceRole](/usage/services/server-supabase-service-role).
 
@@ -17,7 +17,7 @@ This composable is using [supabase-js](https://github.com/supabase/supabase-js/)
 
 Please check [Supabase](https://supabase.com/docs/reference/javascript/select) documentation to fully use the power of Supabase client.
 
-Here is an example of a fetch using the `select` method with Nuxt 3 [useAsyncData](https://v3.nuxtjs.org/docs/usage/data-fetching#useasyncdata) composable.
+Here is an example of a fetch using the `select` method with Nuxt 3 [useAsyncData](https://nuxt.com/docs/getting-started/data-fetching#useasyncdata) composable.
 
 ```vue
 <script setup lang="ts">
@@ -35,7 +35,7 @@ const { data: restaurant } = await useAsyncData('restaurant', async () => {
 
 Based on [Supabase Realtime](https://github.com/supabase/realtime), listen to changes in your PostgreSQL Database and broadcasts them over WebSockets. 
 
-To enable it, make sure you have turned on the [Real Time API](https://supabase.com/docs/guides/api#realtime-api-1) for your table.
+To enable it, make sure you have turned on the [Realtime API](https://supabase.com/docs/guides/api#realtime-api) for your table.
 
 Then, listen to changes directly in your vue page / component:
 
