--- a/docs/content/3.usage/2.services/1.server-supabase-client.md
+++ b/docs/content/3.usage/2.services/1.server-supabase-client.md
@@ -7,7 +7,7 @@ toc: false
  This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
 ::
 
-This function is working similary as the [useSupabaseClient](/usage/composables/use-supabase-client) composable but is designed to be used in [server routes](https://v3.nuxtjs.org/guide/features/server-routes/).
+This function is working similary as the [useSupabaseClient](/usage/composables/use-supabase-client) composable but is designed to be used in [server routes](https://nuxt.com/docs/guide/directory-structure/server#server-routes).
 
 Define your server route and just import the `serverSupabaseClient` from `#supabase/server`.
 
@@ -31,7 +31,7 @@ const fetchLibrary = async () => {
 }
 ```
 
-Be careful, if you want to call this route on SSR, please read this [section](https://v3.nuxtjs.org/guide/features/data-fetching/#isomorphic-fetch-and-fetch), you must send your browser cookies including your supabase token.
+Be careful, if you want to call this route on SSR, please read this [section](https://nuxt.com/docs/getting-started/data-fetching#isomorphic-fetch-and-fetch), you must send your browser cookies including your supabase token.
 
 ```ts [pages/index.vue]
 const { data: { libraries }} = await useFetch('/api/libraries', {
