--- a/docs/content/3.usage/2.services/2.server-supabase-service-role.md
+++ b/docs/content/3.usage/2.services/2.server-supabase-service-role.md
@@ -7,7 +7,7 @@ toc: false
  This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
 ::
 
-This function is designed to work only in [server routes](https://v3.nuxtjs.org/guide/features/server-routes/), there is no vue composable equivalent. 
+This function is designed to work only in [server routes](https://nuxt.com/docs/guide/directory-structure/server#server-routes), there is no vue composable equivalent. 
 
 It works similary as the [serverSupabaseClient](/usage/services/server-supabase-client) but it provides a client with super admin rights that can bypass your [Row Level Security](https://supabase.com/docs/guides/auth/row-level-security).
 
