--- a/docs/content/3.usage/2.services/2.server-supabase-user.md
+++ b/docs/content/3.usage/2.services/2.server-supabase-user.md
@@ -7,7 +7,7 @@ toc: false
  This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
 ::
 
-This function is similar to the [useSupabaseUser](/usage/composables/use-supabase-user) composable but is used in [server routes](https://v3.nuxtjs.org/guide/features/server-routes/).
+This function is similar to the [useSupabaseUser](/usage/composables/use-supabase-user) composable but is used in [server routes](https://nuxt.com/docs/guide/directory-structure/server#server-routes).
 
 Define your server route and import the `serverSupabaseUser` from `#supabase/server`.
 
@@ -29,7 +29,7 @@ const fetchMe = async () => {
 }
 ```
 
-Be careful, if you want to call this route on SSR, please read this [section](https://v3.nuxtjs.org/guide/features/data-fetching/#isomorphic-fetch-and-fetch), you must send your browser cookies including your supabase token.
+Be careful, if you want to call this route on SSR, please read this [section](https://nuxt.com/docs/getting-started/data-fetching#isomorphic-fetch-and-fetch), you must send your browser cookies including your supabase token.
 
 ```ts [pages/index.vue]
 const user = ref(null)
