--- a/docs/content-v1/3.usage/1.composables/1.use-supabase-client.md
+++ b/docs/content-v1/3.usage/1.composables/1.use-supabase-client.md
@@ -3,11 +3,11 @@ title: useSupabaseClient
 description: null
 ---
 
-[Auto-import](https://v3.nuxtjs.org/docs/directory-structure/composables) your client inside your vue files.
+[Auto-import](https://nuxt.com/docs/guide/directory-structure/composables) your client inside your vue files.
 
-This composable is using [supabase-js](https://github.com/supabase/supabase-js/) under the hood, it gives acces to the [Supabase client](https://supabase.com/docs/reference/javascript/supabase-client).
+This composable is using [supabase-js](https://github.com/supabase/supabase-js/) under the hood, it gives access to the [Supabase client](https://supabase.com/docs/reference/javascript/v1/initializing).
 
-> The client is initialized with the `SUPABASE_KEY` you must have in your `.env` file. It establishes the connection with the database and make use of user JWT to apply [RLS Policies](https://supabase.com/docs/learn/auth-deep-dive/auth-row-level-security) implemented in Supabase. If you want to bypass policies, you can use the [serverSupabaseServiceRole](/usage/services/server-supabase-service-role).
+> The client is initialized with the `SUPABASE_KEY` you must have in your `.env` file. It establishes the connection with the database and make use of user JWT to apply [RLS Policies](https://supabase.com/docs/learn/auth-deep-dive/auth-row-level-security) implemented in Supabase. If you want to bypass policies, you can use the [serverSupabaseServiceRole](https://supabase.nuxtjs.org/usage/services/server-supabase-service-role).
 
 ```vue [pages/index.vue]
 <script setup>
@@ -19,9 +19,9 @@ const client = useSupabaseClient()
 
 ## Authentification
 
-All authentification methods are available on [Supabase Auth](https://supabase.com/docs/reference/javascript/auth-signup) Documentation.
+All authentification methods are available on [Supabase Auth](https://supabase.com/docs/reference/javascript/v1/auth-signup) Documentation.
 
-Here is an example of the login using the `signIn` method with [third-party providers](https://supabase.com/docs/reference/javascript/auth-signin#sign-in-using-third-party-providers).
+Here is an example of the login using the `signIn` method with [third-party providers](https://supabase.com/docs/reference/javascript/v1/auth-signin#sign-in-using-third-party-providers).
 
 ```vue [pages/login.vue]
 <script setup lang="ts">
@@ -47,16 +47,16 @@ const login = async (provider: 'github' | 'google' | 'gitlab' | 'bitbucket') => 
 ```
 
 ::alert
-Thanks to the [Nuxt plugin](https://v3.nuxtjs.org/docs/directory-structure/plugins), we are listening to the [onAuthStateChange](https://supabase.com/docs/reference/javascript/auth-onauthstatechange) listener in order to update the user value according to the received event. We also keep the session consistency between client and server side.
+Thanks to the [Nuxt plugin](https://nuxt.com/docs/guide/directory-structure/plugins), we are listening to the [onAuthStateChange](https://supabase.com/docs/reference/javascript/auth-onauthstatechange) listener in order to update the user value according to the received event. We also keep the session consistency between client and server side.
 ::
 
-> Take a look at the [auth middleware](/usage/composables/use-supabase-user#auth-middleware) section to learn how to leverage Nuxt middleware to protect your routes for unauthenticated users.
+> Take a look at the [auth middleware](https://supabase.nuxtjs.org/usage/composables/use-supabase-user#auth-middleware) section to learn how to leverage Nuxt middleware to protect your routes for unauthenticated users.
 
 ## Database Request
 
-Please check [Supabase](https://supabase.com/docs/reference/javascript/select) documentation to fully use the power of Supabase client.
+Please check [Supabase](https://supabase.com/docs/reference/javascript/v1/select) documentation to fully use the power of Supabase client.
 
-Here is an example of a fetch using the `select` method with Nuxt 3 [useAsyncData](https://v3.nuxtjs.org/docs/usage/data-fetching#useasyncdata) composable.
+Here is an example of a fetch using the `select` method with Nuxt 3 [useAsyncData](https://nuxt.com/docs/getting-started/data-fetching#useasyncdata) composable.
 
 ```vue
 <script setup lang="ts">
@@ -74,7 +74,7 @@ const { data: restaurant } = await useAsyncData('restaurant', async () => {
 
 Based on [Supabase Realtime](https://github.com/supabase/realtime), listen to changes in your PostgreSQL Database and broadcasts them over WebSockets. 
 
-To enable it, make sure you have turned on the [Real Time API](https://supabase.com/docs/guides/api#realtime-api-1) for your table.
+To enable it, make sure you have turned on the [Realtime API](https://supabase.com/docs/guides/api#realtime-api) for your table.
 
 Then, listen to changes directly in your vue page / component:
 
