--- a/docs/content/3.usage/1.composables/1.use-supabase-auth-client.md
+++ b/docs/content/3.usage/1.composables/1.use-supabase-auth-client.md
@@ -3,9 +3,9 @@ title: useSupabaseAuthClient
 description: null
 ---
 
-[Auto-import](https://v3.nuxtjs.org/docs/directory-structure/composables) your client inside your vue files.
+[Auto-import](https://nuxt.com/docs/guide/directory-structure/composables) your client inside your vue files.
 
-This composable is using [supabase-js](https://github.com/supabase/supabase-js/) under the hood, it gives acces to the [Supabase client](https://supabase.com/docs/reference/javascript/supabase-client) in order to handle authentification actions, all methods are available on [Supabase Auth](https://supabase.com/docs/reference/javascript/auth-signup) Documentation.
+This composable is using [supabase-js](https://github.com/supabase/supabase-js/) under the hood, it gives acces to the [Supabase client](https://supabase.com/docs/reference/javascript/initializing) in order to handle authentification actions, all methods are available on [Supabase Auth](https://supabase.com/docs/reference/javascript/auth-signup) Documentation.
 
 > The client is initialized with the `SUPABASE_KEY` you must have in your `.env` file.
 
@@ -15,7 +15,7 @@ This client is dedicated to authentification purpose only. It won't be recreate 
 
 ## SignIn
 
-Here is an example of the login using the `signInWithOAuth` method with [third-party providers](https://supabase.com/docs/reference/javascript/next/auth-signinwithoauth).
+Here is an example of the login using the `signInWithOAuth` method with [third-party providers](https://supabase.com/docs/reference/javascript/auth-signinwithoauth).
 
 ```vue [pages/login.vue]
 <script setup lang="ts">
@@ -41,14 +41,14 @@ const login = async (provider: 'github' | 'google' | 'gitlab' | 'bitbucket') => 
 ```
 
 ::alert
-Thanks to the [Nuxt plugin](https://v3.nuxtjs.org/docs/directory-structure/plugins), we are listening to the [onAuthStateChange](https://supabase.com/docs/reference/javascript/auth-onauthstatechange) listener in order to update the user value according to the received event. We also keep the session consistency between client and server side.
+Thanks to the [Nuxt plugin](https://nuxt.com/docs/guide/directory-structure/plugins), we are listening to the [onAuthStateChange](https://supabase.com/docs/reference/javascript/auth-onauthstatechange) listener in order to update the user value according to the received event. We also keep the session consistency between client and server side.
 ::
 
 > Take a look at the [auth middleware](/usage/composables/use-supabase-user#auth-middleware) section to learn how to leverage Nuxt middleware to protect your routes for unauthenticated users.
 
 ## SignOut
 
-Check [Supabase Documentation](https://supabase.com/docs/reference/javascript/next/auth-signout) for further details.
+Check [Supabase Documentation](https://supabase.com/docs/reference/javascript/auth-signout) for further details.
 
 ```vue
 <template>
