--- a/docs/content/3.usage/1.composables/2.use-supabase-user.md
+++ b/docs/content/3.usage/1.composables/2.use-supabase-user.md
@@ -4,7 +4,7 @@ description: null
 toc: false
 ---
 
-Once logged in, you can [auto-import](https://v3.nuxtjs.org/docs/directory-structure/composables) your user everywhere inside your vue files.
+Once logged in, you can [auto-import](https://nuxt.com/docs/guide/directory-structure/composables) your user everywhere inside your vue files.
 
 ```vue
 <script setup>
@@ -34,5 +34,5 @@ definePageMeta({
 })
 ```
 
-Learn more about [Nuxt middleware](https://v3.nuxtjs.org/docs/directory-structure/middleware) and [definePageMeta](https://v3.nuxtjs.org/docs/directory-structure/pages#page-metadata).
+Learn more about [Nuxt middleware](https://nuxt.com/docs/guide/directory-structure/middleware) and [definePageMeta](https://nuxt.com/docs/guide/directory-structure/pages#page-metadata).
 
