chore: fix typos

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -35,7 +35,7 @@ export default defineNuxtConfig({
 Lastly, add `SUPABASE_URL` and `SUPABASE_KEY` to the `.env`:
 
 ```zsh [.env]
-SUPABASE_URL="https://example.supabase.com"
+SUPABASE_URL="https://example.supabase.co"
 SUPABASE_KEY="<your_key>"
 ```
 
