--- a/docs/content/3.usage/1.composables/1.use-supabase-auth-client.md
+++ b/docs/content/3.usage/1.composables/1.use-supabase-auth-client.md
@@ -5,12 +5,12 @@ description: null
 
 [Auto-import](https://nuxt.com/docs/guide/directory-structure/composables) your client inside your vue files.
 
-This composable is using [supabase-js](https://github.com/supabase/supabase-js/) under the hood, it gives acces to the [Supabase client](https://supabase.com/docs/reference/javascript/initializing) in order to handle authentification actions, all methods are available on [Supabase Auth](https://supabase.com/docs/reference/javascript/auth-signup) Documentation.
+This composable is using [supabase-js](https://github.com/supabase/supabase-js/) under the hood, it gives access to the [Supabase client](https://supabase.com/docs/reference/javascript/initializing) in order to handle authentification actions, all methods are available on [Supabase Auth](https://supabase.com/docs/reference/javascript/auth-signup) Documentation.
 
 > The client is initialized with the `SUPABASE_KEY` you must have in your `.env` file.
 
 ::alert
-This client is dedicated to authentification purpose only. It won't be recreate if your token expires, it is used in the client plugin to listen to `onAuthStateChange` events. If you want to fetch data from the db, please use the [useSupabaseClient](/usage/composables/use-supabase-client) instead.
+This client is dedicated to authentification purpose only. It won't be recreated if your token expires, it is used in the client plugin to listen to `onAuthStateChange` events. If you want to fetch data from the db, please use the [useSupabaseClient](/usage/composables/use-supabase-client) instead.
 ::
 
 ## SignIn
