use navigateTo() instead useRouter()

--- a/docs/content/3.usage/1.composables/1.use-supabase-auth-client.md
+++ b/docs/content/3.usage/1.composables/1.use-supabase-auth-client.md
@@ -21,7 +21,6 @@ Here is an example of the login using the `signInWithOAuth` method with [third-p
 <script setup lang="ts">
 const user = useSupabaseUser()
 const client = useSupabaseAuthClient()
-const router = useRouter()
 
 // Login method using providers
 const login = async (provider: 'github' | 'google' | 'gitlab' | 'bitbucket') => {
@@ -31,7 +30,7 @@ const login = async (provider: 'github' | 'google' | 'gitlab' | 'bitbucket') => 
     return alert('Something went wrong !')
   }
 
-  router.push('/dashboard')
+  navigateTo('/dashboard')
 }
 </script>
 
