--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -25,7 +25,7 @@ npm install @nuxtjs/supabase --save-dev
 Then, add `@nuxtjs/supabase` to the `modules` section of `nuxt.config.js`:
 
 ```ts [nuxt.config.ts]
-import { defineNuxtConfig } from 'nuxt'
+import { defineNuxtConfig } from 'nuxt/config'
 
 export default defineNuxtConfig({
   modules: ['@nuxtjs/supabase'],
@@ -44,7 +44,7 @@ SUPABASE_KEY="<your_key>"
 You can configure the supabase module by using the `supabase` key in `nuxt.config`:
 
 ```ts [nuxt.config.ts]
-import { defineNuxtConfig } from 'nuxt'
+import { defineNuxtConfig } from 'nuxt/config'
 
 export default defineNuxtConfig({
   // ...
