Modified documentation to reflect change

--- a/docs/content/3.usage/1.composables/1.use-supabase-client.md
+++ b/docs/content/3.usage/1.composables/1.use-supabase-client.md
@@ -74,11 +74,25 @@ onUnmounted(() => {
 
 ## Typescript
 
+### Default use-case
 You can pass Database typings to the client. Check Supabase [documentation](https://supabase.com/docs/reference/javascript/release-notes#typescript-support) for further information.
 
 ```vue
 <script setup lang="ts">
 import type { Database } from '~/types'
 const client = useSupabaseClient<Database>()
+</script>
+```
+
+### Custom Schema
+You can pass Database typings to the client with a custom schema as well, when generating supabase types with multiple schemas.
+```Shell
+supabase gen types typescript --project-id put-project-id-here --schema public --schema otherschema > types/index.ts
+```
+Example of using another schema: 
+```vue
+<script setup lang="ts">
+import type { Database } from '~/types'
+const client = useSupabaseClient<Database, 'otherschema'>();
 </script>
 ```
