add: setup attr to script tag

--- a/docs/content/3.usage/1.composables/1.use-supabase-auth-client.md
+++ b/docs/content/3.usage/1.composables/1.use-supabase-auth-client.md
@@ -51,11 +51,11 @@ Thanks to the [Nuxt plugin](https://nuxt.com/docs/guide/directory-structure/plug
 Check [Supabase Documentation](https://supabase.com/docs/reference/javascript/auth-signout) for further details.
 
 ```vue
+<script setup>
+const client = useSupabaseAuthClient()
+</script>
+
 <template>
   <button @click="client.auth.signOut()">Logout</button>
 </template>
-
-<script>
-const client = useSupabaseAuthClient()
-</script>
 ```
