get started page

--- a/docs-v2/content/2.get-started.md
+++ b/docs-v2/content/2.get-started.md
@@ -1,6 +1,102 @@
 ---
 title: Get Started
 icon: heroicons:rocket-launch
+description: '@nuxtjs/supabase is a Nuxt module for first class integration with Supabase.'
 ---
 
-Hello
+Checkout the [Nuxt 3](https://v3.nuxtjs.org) documentation and [Supabase](https://supabase.com) to learn more.
+
+::alert
+For integrating Supabase with Nuxt 2, checkout [supabase-community/nuxt-supabase](https://github.com/supabase-community/nuxt-supabase).
+::
+
+## Installation
+
+Add `@nuxtjs/supabase` dev dependency to your project:
+
+::code-group
+```bash [yarn]
+yarn add --dev @nuxtjs/supabase
+```
+```bash [NPM]
+npm install @nuxtjs/supabase --save-dev
+```
+::
+
+Then, add `@nuxtjs/supabase` to the `modules` section of `nuxt.config.js`:
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  modules: ['@nuxtjs/supabase'],
+})
+```
+
+Lastly, add `SUPABASE_URL` and `SUPABASE_KEY` to the `.env`:
+
+```zsh [.env]
+SUPABASE_URL="https://example.supabase.co"
+SUPABASE_KEY="<your_key>"
+```
+
+## Options
+
+You can configure the supabase module by using the `supabase` key in `nuxt.config`:
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  // ...
+  supabase: {
+    // Options
+  }
+}
+```
+
+### `url`
+
+Default: `process.env.SUPABASE_URL` (ex: https://example.supabase.co)
+
+The unique Supabase URL which is supplied when you create a new project in your project dashboard.
+
+### `key`
+
+Default: `process.env.SUPABASE_KEY`
+
+Supabase 'anon key', used to bypass the Supabase API gateway and interact with your Supabase database making use of user JWT to apply RLS Policies.
+
+### `serviceKey`
+
+Default: `process.env.SUPABASE_SERVICE_KEY`
+
+Supabase 'service role key', has super admin rights and can bypass your Row Level Security.
+
+
+### `redirect`
+
+Default: `false`
+
+Supabase redirect options.
+
+- `login`: User will be redirected to this path if not authenticated or after logout. 
+- `callback`: This is the path the user will be redirect to after supabase login redirection. Should match configured `redirectTo` option of your [signIn method](https://supabase.com/docs/reference/javascript/auth-signinwithoauth).
+
+You can disable all redirects by setting this option to false.
+
+### `client`
+
+Default: `{}`
+
+Supabase client options [available here](https://github.com/supabase/supabase-js/blob/master/src/lib/types.ts#L10).
+
+## Versions
+
+`0.1.x` versions are wrapped around `supabase-js v1`.
+<br>
+`0.2.x` versions are wrapped around `supabase-js v2`.
+
+## Demo
+
+A live demo is made for see this module in action on [n3-supabase.netlify.app](https://n3-supabase.netlify.app), read more in the [demo section](/demo).
+
+[![Supabase demo with Nuxt 3](https://user-images.githubusercontent.com/904724/160422461-8f87500a-8dec-4413-86b2-ba04e1b2d17b.png)](https://n3-supabase.netlify.app)
+
+Also checkout the [YouTube video](https://www.youtube.com/watch?v=jIyiRT6zT8Q) about its usage in a live demo.
