--- a/docs-v2/content/3.usage/services/1.serverSupabaseClient.md
+++ b/docs-v2/content/3.usage/services/1.serverSupabaseClient.md
@@ -1,5 +1,5 @@
 ---
-description: Make requests to the Supabase API on server side with the serverSupabaseClient 
+description: Make requests to the Supabase API on server side with the serverSupabaseClient service
 ---
 
 ::alert{type="warning"}
