--- a/docs-v2/content/5.changelog.md
+++ b/docs-v2/content/5.changelog.md
@@ -1,6 +1,7 @@
 ---
 title: Changelog
 icon: heroicons:bookmark
+description: Discover the latest updates of the Supabase Module
 ---
 
-Content here
+TODO
