--- a/docs-v2/content/6.roadmap.md
+++ b/docs-v2/content/6.roadmap.md
@@ -1,6 +1,7 @@
 ---
 title: Roadmap
+description: Discover our kaban board for the next release of the Supabase module.
 icon: heroicons:map
 ---
 
-Content here
+:volta-board{token="toeyJzdGF0dXNlcyI6WyJ0cmlhZ2UiLCJiYWNrbG9nIiwidG9kbyIsImluX3Byb2dyZXNzIiwiaW5fcmV2aWV3IiwiZG9uZSIsInJlbGVhc2VkIiwiY2FuY2VsbGVkIl0sImZpbHRlcnMiOnt9LCJvd25lciI6Im51eHQtbW9kdWxlcyIsIm5hbWUiOiJzdXBhYmFzZSJ9ken"}
