docs(usage): add titles

--- a/docs-v2/content/2.get-started.md
+++ b/docs-v2/content/2.get-started.md
@@ -4,6 +4,10 @@ icon: heroicons:rocket-launch
 description: '@nuxtjs/supabase is a Nuxt module for first class integration with Supabase.'
 ---
 
+# Getting started
+
+**@nuxtjs/supabase** is a Nuxt module for first class integration with Supabase.
+
 Checkout the [Nuxt 3](https://v3.nuxtjs.org) documentation and [Supabase](https://supabase.com) to learn more.
 
 ::alert
