--- a/docs-v2/content/3.usage/services/1.serverSupabaseClient.md
+++ b/docs-v2/content/3.usage/services/1.serverSupabaseClient.md
@@ -1,6 +1,9 @@
 ---
+title: serverSupabaseClient
 description: Make requests to the Supabase API on server side with the serverSupabaseClient service
 ---
+
+# serverSupabaseClient
 
 ::alert{type="warning"}
  This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
