--- a/docs-v2/content/3.usage/services/2.serverSupabaseServiceRole.md
+++ b/docs-v2/content/3.usage/services/2.serverSupabaseServiceRole.md
@@ -1,6 +1,9 @@
 ---
+title: serverSupabaseServiceRole
 description: Make requests with super admin rights to the Supabase API with the serverSupabaseServiceRole service
 ---
+
+# serverSupabaseServiceRole
 
 ::alert{type="warning"}
  This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
