--- a/docs-v2/content/3.usage/services/3.serverSupabaseUser.md
+++ b/docs-v2/content/3.usage/services/3.serverSupabaseUser.md
@@ -1,6 +1,9 @@
 ---
+title: serverSupabaseUser
 description: Get your Supabase user from serverside with the serverSupabaseUser service
 ---
+
+# serverSupabaseUser
 
 ::alert{type="warning"}
  This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
