docs(options): exclude in redirect options

--- a/docs-v2/content/2.get-started.md
+++ b/docs-v2/content/2.get-started.md
@@ -91,11 +91,13 @@ Default:
 ```ts [nuxt.config.ts]
   redirectOptions: {
     login: '/login',
-    callback: '/confirm'
+    callback: '/confirm',
+    exclude: [],
   }
 ```
 - `login`: User will be redirected to this path if not authenticated or after logout. 
 - `callback`: This is the path the user will be redirect to after supabase login redirection. Should match configured `redirectTo` option of your [signIn method](https://supabase.com/docs/reference/javascript/auth-signinwithoauth). Should also be configured in your Supabase dashboard under `Authentication -> URL Configuration -> Redirect URLs`.
+- `exclude`: Routes to exclude from the redirect. `['/foo', '/bar/*']` will exclude the `foo` page and all pages in your `bar` folder.
 
 ### `cookieName`
 
@@ -107,9 +109,9 @@ Cookie name used for storing access and refresh tokens, added in front of `-acce
 
 ```ts
   cookieOptions: {
-    lifetime: 60 * 60 * 8,
+    maxAge: 60 * 60 * 8,
     sameSite: 'lax',
-    secure: true,
+    secure: true
   }
 ```
 Options for cookies used to share tokens between server and client, refer to [cookieOptions](https://nuxt.com/docs/api/composables/use-cookie#options) for available settings. Please note that the lifetime set here does not determine the Supabase session lifetime.
