--- a/docs-v2/content/3.authentication.md
+++ b/docs-v2/content/3.authentication.md
@@ -73,7 +73,7 @@ watch(user, () => {
   if (user.value) {
     return navigateTo('/')
   }
-})
+}, { immediate: true })
 </script>
 <template>
   <div>Waiting for login...</div>
