--- a/docs-v2/content/3.usage/services/1.serverSupabaseClient.md
+++ b/docs-v2/content/3.usage/services/1.serverSupabaseClient.md
@@ -11,15 +11,15 @@ description: Make requests to the Supabase API on server side with the serverSup
 
 This function is working similary as the [useSupabaseClient](/usage/composables/usesupabaseclient) composable but is designed to be used in [server routes](https://nuxt.com/docs/guide/directory-structure/server#server-routes).
 
-Define your server route and just import the `serverSupabaseClient` from `#supabase/server`.
+Define your server route and just import the `serverSupabaseClient` from `#supabase/server`. Be careful,  `serverSupabaseClient` is returning a promise.
 
 ```ts [server/api/libraries.ts]
 import { serverSupabaseClient } from '#supabase/server'
 
 export default eventHandler(async (event) => {
-  const client = serverSupabaseClient(event)
+  const client = await serverSupabaseClient(event)
 
-  const { data } = await client.from('libraries').select()
+  const { data } = await client.from('libraries').select('*')
 
   return { libraries: data }
 })
