docs(changelog): create component

--- a/docs-v2/content/5.changelog.md
+++ b/docs-v2/content/5.changelog.md
@@ -4,4 +4,7 @@ icon: heroicons:bookmark
 description: Discover the latest updates of the Supabase Module
 ---
 
-TODO
+# Changelog
+Discover the lastest updates.
+
+:releases
