docs: update docs

--- a/docs/content/1.index.md
+++ b/docs/content/1.index.md
@@ -1,23 +1,25 @@
 ---
-title: "Nuxt Supabase"
-description: "A supa simple wrapper around supabase-js to enable usage and integration within Nuxt."
+title: Home
 navigation: false
-layout: fluid
+layout: page
+main:
+  fluid: false
 ---
+
+:ellipsis{right=0px width=75% blur=150px}
 
 ::block-hero
 ---
 cta:
-  - Get Started
+  - Get started
   - /get-started
 secondary:
-  - Star on GitHub ->
+  - Star on GitHub →
   - https://github.com/nuxt-community/supabase-module
-snippet: yarn add --dev @nuxtjs/supabase
 ---
 
 #title
-Nuxt [Supabase]{.text-primary-500}
+Nuxt [Supabase]{style="color: var(--color-primary-500)"}
 
 #description
 A supa simple wrapper around [supabase-js](https://github.com/supabase/supabase-js) to enable usage and integration within Nuxt. 
@@ -31,4 +33,13 @@ A supa simple wrapper around [supabase-js](https://github.com/supabase/supabase-
   - Authentication support
   - TypeScript support
   ::
+
+#support
+  ::terminal
+  ---
+  content:
+  - yarn add --dev @nuxtjs/supabase
+  ---
+  ::
 ::
+
