--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -1,7 +1,12 @@
 ---
-title: Introduction
+title: Get Started
+icon: heroicons:rocket-launch
 description: '@nuxtjs/supabase is a Nuxt module for first class integration with Supabase.'
 ---
+
+# Getting started
+
+**@nuxtjs/supabase** is a Nuxt module for first class integration with Supabase.
 
 Checkout the [Nuxt 3](https://v3.nuxtjs.org) documentation and [Supabase](https://supabase.com) to learn more.
 
@@ -14,6 +19,9 @@ For integrating Supabase with Nuxt 2, checkout [supabase-community/nuxt-supabase
 Add `@nuxtjs/supabase` dev dependency to your project:
 
 ::code-group
+```bash [pnpm]
+pnpm add -D @nuxtjs/supabase
+```
 ```bash [yarn]
 yarn add --dev @nuxtjs/supabase
 ```
@@ -22,7 +30,7 @@ npm install @nuxtjs/supabase --save-dev
 ```
 ::
 
-Then, add `@nuxtjs/supabase` to the `modules` section of `nuxt.config.js`:
+Add `@nuxtjs/supabase` to the `modules` section of `nuxt.config.js`:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
@@ -30,7 +38,7 @@ export default defineNuxtConfig({
 })
 ```
 
-Lastly, add `SUPABASE_URL` and `SUPABASE_KEY` to the `.env`:
+Add `SUPABASE_URL` and `SUPABASE_KEY` to the `.env`:
 
 ```zsh [.env]
 SUPABASE_URL="https://example.supabase.co"
@@ -71,26 +79,64 @@ Supabase 'service role key', has super admin rights and can bypass your Row Leve
 
 ### `redirect`
 
-Default: `false`
+Default: `true`
 
-Supabase redirect options.
+Redirect automatically to the configured login page if a non authenticated user is trying to access a guarded. You can disable all redirects by setting this option to false.
 
+
+### `redirectOptions`
+
+Default:
+
+```ts [nuxt.config.ts]
+  redirectOptions: {
+    login: '/login',
+    callback: '/confirm',
+    exclude: [],
+  }
+```
 - `login`: User will be redirected to this path if not authenticated or after logout. 
-- `callback`: This is the path the user will be redirect to after supabase login redirection. Should match configured `redirectTo` option of your [signIn method](https://supabase.com/docs/reference/javascript/auth-signinwithoauth).
+- `callback`: This is the path the user will be redirect to after supabase login redirection. Should match configured `redirectTo` option of your [signIn method](https://supabase.com/docs/reference/javascript/auth-signinwithoauth). Should also be configured in your Supabase dashboard under `Authentication -> URL Configuration -> Redirect URLs`.
+- `exclude`: Routes to exclude from the redirect. `['/foo', '/bar/*']` will exclude the `foo` page and all pages in your `bar` folder.
 
-You can disable all redirects by setting this option to false.
+### `cookieName`
 
-### `client`
+Default: `sb`
 
-Default: `{}`
+Cookie name used for storing access and refresh tokens, added in front of `-access-token` and `-refresh-token` to form the full cookie name e.g. `sb-access-token`
 
-Supabase client options [available here](https://github.com/supabase/supabase-js/blob/master/src/lib/types.ts#L10).
+### cookieOptions
+
+```ts
+  cookieOptions: {
+    maxAge: 60 * 60 * 8,
+    sameSite: 'lax',
+    secure: true
+  }
+```
+Options for cookies used to share tokens between server and client, refer to [cookieOptions](https://nuxt.com/docs/api/composables/use-cookie#options) for available settings. Please note that the lifetime set here does not determine the Supabase session lifetime.
+
+### `clientOptions`
+
+Default:
+```ts
+  clientOptions: {
+    auth: {
+      flowType: 'pkce',
+      detectSessionInUrl: true,
+      persistSession: true,
+      autoRefreshToken: true
+    },
+  }
+  ```
+
+Supabase client options [available here](https://supabase.com/docs/reference/javascript/initializing#parameters).
 
 ## Versions
 
 `0.1.x` versions are wrapped around `supabase-js v1`.
 <br>
-`0.2.x` versions are wrapped around `supabase-js v2`.
+`1.x.x` versions are wrapped around `supabase-js v2`.
 
 ## Demo
 
