--- a/docs/content/5.changelog.md
+++ b/docs/content/5.changelog.md
@@ -1,9 +1,10 @@
 ---
-layout: docs
-toc: false
 title: Changelog
-description: Discover the latest updates.
+icon: heroicons:bookmark
+description: Discover the latest updates of the Supabase Module
 ---
 
-::releases
-::
+# Changelog
+Discover the lastest updates.
+
+:releases
