docs(auth): update

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -6,7 +6,7 @@ description: '@nuxtjs/supabase is a Nuxt module for first class integration with
 
 # Getting started
 
-**@nuxtjs/supabase** is a Nuxt module for first class integration with Supabase.
+[@nuxtjs/supabase](https://github.com/nuxt-modules/supabase) is a Nuxt module for first class integration with Supabase.
 
 Checkout the [Nuxt 3](https://v3.nuxtjs.org) documentation and [Supabase](https://supabase.com) to learn more.
 
