--- a/docs/content/3.authentication.md
+++ b/docs/content/3.authentication.md
@@ -16,15 +16,14 @@ For advanced users who want to implement the auth behaviour themselves, you can 
 
 ## Log-in page - `/login`
 
-Each time a user is trying to access a page that needs authentication, he will automatically be redirected to the configured log in page.
+Each time a user is trying to access a page that needs authentication, he will automatically be redirected to the configured log in page. If you want to allow access to "public" page, you just need to add them in the [exclude](/get-started#redirectOptions) redirect option. 
 
-The log-in page initiates the log-in method(s) you choose from the [available authorization methods](https://supabase.com/docs/reference/javascript/auth-signinwithpassword) provided by Supabase. 
 
 ::alert{type="warning"}
 Ensure to activate the authentication providers you want in the Supabase Dashboard under `Authentication -> Providers`.
 ::
 
-Here is what the the `login.vue` could looks like:
+The log-in page initiates the log-in method(s) you choose from the [available authorization methods](https://supabase.com/docs/reference/javascript/auth-signinwithpassword) provided by Supabase, it could looks like:
 
 ```vue [pages/login.vue]
 <script setup lang="ts">
