--- a/docs/content/3.authentication.md
+++ b/docs/content/3.authentication.md
@@ -16,7 +16,7 @@ For advanced users who want to implement the auth behaviour themselves, you can 
 
 ## Log-in page - `/login`
 
-Each time a user is trying to access a page that needs authentication, he will automatically be redirected to the configured log in page. If you want to allow access to "public" page, you just need to add them in the [exclude](/get-started#redirectOptions) redirect option. 
+Each time a user is trying to access a page that needs authentication, he will automatically be redirected to the configured log in page. If you want to allow access to "public" page, you just need to add them in the [exclude](/get-started#redirectoptions) redirect option. 
 
 
 ::alert{type="warning"}
