--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -30,7 +30,7 @@ npm install @nuxtjs/supabase --save-dev
 ```
 ::
 
-Add `@nuxtjs/supabase` to the `modules` section of `nuxt.config.js`:
+Add `@nuxtjs/supabase` to the `modules` section of `nuxt.config.ts`:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
