docs(auth): update confirm page check

--- a/docs/content/3.authentication.md
+++ b/docs/content/3.authentication.md
@@ -57,7 +57,7 @@ Once the authorization flow is triggered using the `auth` wrapper of the [useSup
 
 ## Confirm page - `/confirm`
 
-The confirmation page receives the supabase callback. From there you can watch on the user value and redirect to the appropriate page.
+The confirmation page receives the supabase callback. From there you can check the user value and redirect to the appropriate page.
 
 ::alert{}
 The redirect URL must be configured in your Supabase dashboard under `Authentication -> URL Configuration -> Redirect URLs`.
@@ -67,12 +67,10 @@ The redirect URL must be configured in your Supabase dashboard under `Authentica
 ```vue [pages/confirm.vue]
 <script setup lang="ts">
 const user = useSupabaseUser()
+if (user.value) {
+  return navigateTo('/')
+}
 
-watch(user, () => {
-  if (user.value) {
-    return navigateTo('/')
-  }
-}, { immediate: true })
 </script>
 <template>
   <div>Waiting for login...</div>
