docs(auth): set immediate true to watch user

--- a/docs/content/3.authentication.md
+++ b/docs/content/3.authentication.md
@@ -67,9 +67,11 @@ The redirect URL must be configured in your Supabase dashboard under `Authentica
 ```vue [pages/confirm.vue]
 <script setup lang="ts">
 const user = useSupabaseUser()
-if (user.value) {
-  return navigateTo('/')
-}
+watch(user, () => {
+  if (user.value) {
+    return navigateTo('/')
+  }
+}, { immediate: true })
 
 </script>
 <template>
