--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -89,10 +89,12 @@ Redirect automatically to the configured login page if a non authenticated user 
 Default:
 
 ```ts [nuxt.config.ts]
-  redirectOptions: {
-    login: '/login',
-    callback: '/confirm',
-    exclude: [],
+  supabase: {
+      redirectOptions: {
+        login: '/login',
+        callback: '/confirm',
+        exclude: [],
+    }
   }
 ```
 - `login`: User will be redirected to this path if not authenticated or after logout. 
@@ -108,10 +110,12 @@ Cookie name used for storing access and refresh tokens, added in front of `-acce
 ### cookieOptions
 
 ```ts
-  cookieOptions: {
-    maxAge: 60 * 60 * 8,
-    sameSite: 'lax',
-    secure: true
+  supabase: {
+    cookieOptions: {
+      maxAge: 60 * 60 * 8,
+      sameSite: 'lax',
+      secure: true
+    }
   }
 ```
 Options for cookies used to share tokens between server and client, refer to [cookieOptions](https://nuxt.com/docs/api/composables/use-cookie#options) for available settings. Please note that the lifetime set here does not determine the Supabase session lifetime.
@@ -120,15 +124,17 @@ Options for cookies used to share tokens between server and client, refer to [co
 
 Default:
 ```ts
-  clientOptions: {
-    auth: {
-      flowType: 'pkce',
-      detectSessionInUrl: true,
-      persistSession: true,
-      autoRefreshToken: true
-    },
+  supabase:{
+    clientOptions: {
+      auth: {
+        flowType: 'pkce',
+        detectSessionInUrl: true,
+        persistSession: true,
+        autoRefreshToken: true
+      },
+    }
   }
-  ```
+```
 
 Supabase client options [available here](https://supabase.com/docs/reference/javascript/initializing#parameters).
 
