docs: mention that user can use runtimeConfig env

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -40,10 +40,14 @@ export default defineNuxtConfig({
 
 Add `SUPABASE_URL` and `SUPABASE_KEY` to the `.env`:
 
-```zsh [.env]
+```zsh [env]
 SUPABASE_URL="https://example.supabase.co"
 SUPABASE_KEY="<your_key>"
 ```
+
+::alert
+Alternatively, you can prefix the env variables with `NUXT_PUBLIC_` in order to use runtimeConfig.
+::
 
 ## Options
 
