docs(app): remove double title

--- a/docs/content/4.usage/services/2.serverSupabaseServiceRole.md
+++ b/docs/content/4.usage/services/2.serverSupabaseServiceRole.md
@@ -1,9 +1,8 @@
 ---
-title: serverSupabaseServiceRole
+title: serverServiceRole
 description: Make requests with super admin rights to the Supabase API with the serverSupabaseServiceRole service
+navigation.title: serverSupabaseServiceRole
 ---
-
-# serverSupabaseServiceRole
 
 ::callout{icon="i-heroicons-exclamation-triangle-20-solid" color="amber"}
  This section assumes you're familiar with [Nitro](https://v3.nuxtjs.org/guide/concepts/server-engine), the server engine powered by Nuxt.
