--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -26,6 +26,9 @@ yarn add --dev @nuxtjs/supabase
 ```bash [NPM]
 npm install @nuxtjs/supabase --save-dev
 ```
+```bash [bun]
+bun add -D @nuxtjs/supabase
+```
 ::
 
 Add `@nuxtjs/supabase` to the `modules` section of `nuxt.config.ts`:
