--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -135,6 +135,15 @@ Default:
   }
   ```
 
+### `disableWarnings`
+
+Default: `false`
+
+Disable warnings for missing redirect page routes, for instance if a server endpoint is being used instead of a page route
+
+------
+
+
 Supabase client options [available here](https://supabase.com/docs/reference/javascript/initializing#parameters).
 
 ## Versions
