Add docs and make requested changes.

--- a/docs/content/2.get-started.md
+++ b/docs/content/2.get-started.md
@@ -69,6 +69,13 @@ Default: `process.env.SUPABASE_URL` (ex: https://example.supabase.co)
 
 The unique Supabase URL which is supplied when you create a new project in your project dashboard.
 
+### `serverUrl`
+
+Default: `process.env.SUPABASE_URL` (ex: https://example.supabase.co)
+
+The unique Supabase URL that Nuxtjs should use on the server side. Only useful when using nuxt SSR and Supabase in a docker-compose configuration (the browser and the server component of Nuxt have to connect to different urls to reach the supabase server)
+
+
 ### `key`
 
 Default: `process.env.SUPABASE_KEY`
