feat(app): added redirect path cookie for use after signin
Added a feature to store the requested route that is outside the scope of the excluded routes. The route is stored in a cookie and disabled by default.

--- a/docs/content/3.authentication.md
+++ b/docs/content/3.authentication.md
@@ -65,9 +65,17 @@ The redirect URL must be configured in your Supabase dashboard under `Authentica
 ```vue [pages/confirm.vue]
 <script setup lang="ts">
 const user = useSupabaseUser()
+
+// Pull in the config to get cookie details
+const config = useRuntimeConfig().public.supabase;
+const { cookieName } = config;
+const redirectPath = useCookie(`${cookieName}-redirect-path`).value;
+
+
 watch(user, () => {
   if (user.value) {
-    return navigateTo('/')
+      useCookie(`${cookieName}-redirect-path`).value = null // Clear the cookie
+      return navigateTo(redirectPath || '/'); // Redirect or go to protected page
   }
 }, { immediate: true })
 
